# Simple-MPR-Viewer

./: .gitignore  CMakeLists.txt  README.md
include/: BSpline.hpp  DICOMViewer.h  MPRViewerWidget.h  customemprviewerinteractor.h  filePage.h  fileVerticalList.h  itkProcessor.h  mainwindow.h
src/: DICOMViewer.cpp  MPRViewerWidget.cpp  customemprviewerinteractor.cpp  customemprviewerinteractor.h  filepage.cpp  filepage.ui  fileverticallist.cpp  itkProcessor.cpp  mainwindow.cpp  mainwindow.ui
style/: res.qrc  styles.qss
style/ui/: filepage.ui  mainwindow.ui
